--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -70,6 +70,14 @@
                     {% endif %}
                   </td>
                 </tr>
+                {% empty %}
+                <tr>
+                <td>
+                  <center>
+                      <h2>Todo list is empty</h2>
+                  </center>
+                </td>
+                </tr>
                 {% endfor %}
               </tbody>
             </table>
