--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -6,6 +6,14 @@
   <meta name="description" content="Todo List App. For staying more organinsed and disciplined">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<style type="text/css">
+  .action-btns{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
+</style>
 </head>
 <body>
 	<section class="vh-100" style="background-color: #eee;">
@@ -15,19 +23,21 @@
         <div class="card rounded-3">
           <div class="card-body p-4">
 
-            <h4 class="text-center my-3 pb-3">ToDoListApp</h4>
+            <h4 class="text-center my-3 pb-3">TODO LIST APP</h4>
 
             <form method="POST" action="{% url 'todo:create' %}" class="row row-cols-lg-auto g-3 justify-content-center align-items-center mb-4 pb-2">
               {% csrf_token %}
-              <div class="col-12">
-                <div class="form-outline">
-                  <input type="text" id="form1" name="body" class="form-control" required/>
-                  <label class="form-label" for="form1">Enter a task here</label>
+              <div class="action-btns">
+                <div class="col-9 px-3" class="todo-input">
+                  <div class="form-outline">
+                    <input type="text" id="form1" name="body" class="form-control" required/>
+                    <label class="form-label" for="form1">Enter a task here</label>
+                  </div>
                 </div>
-              </div>
 
-              <div class="col-12">
-                <button type="submit" class="btn btn-primary">Save</button>
+                <div class="col-3">
+                  <button type="submit" class="btn btn-primary">Add</button>
+                </div>
               </div>
               
             </form>
@@ -45,29 +55,36 @@
                 {% for todo in todos %}
                 <tr>
                   <th scope="row">{{forloop.counter}}</th>
-                  <td>{{todo.todo_body}}</td>
+                  {% if todo.done %}
+                    <td style="text-decoration: line-through;">{{todo.body}}</td>
+                  {% else %}
+                    <td>{{todo.body}}</td>
+                  {% endif %}
                   <td>
-                      {% if todo.finished %}
+                      {% if todo.done %}
                           Finished
                       {% else %}
                           In progress
                       {% endif %}
                     </td>
                   <td>
-                    <form method="POST" action="{% url 'todo:delete' %}">
-                          {% csrf_token %}
-                        <input type="text" name="todo_id" value="{{todo.id}}" style="display: none;">
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                    </form>
+                    <div class="action-btns">
+                      <form method="POST" action="{% url 'todo:delete' %}">
+                        {% csrf_token %}
+                          <input type="text" name="todo_id" value="{{todo.id}}" style="display: none;">
+                          <button type="submit" class="btn btn-danger">Delete</button>
+                      </form>
 
-                    {% if todo.finished %}
-                    {% else %}
-                    <form method="POST" action="{% url 'todo:update' %}">
-                          {% csrf_token %}
-                        <input type="text" name="todo_id" value="{{todo.id}}" style="display: none;">
-                        <button type="submit" class="btn btn-success ms-1">Finished</button>
-                    </form>
-                    {% endif %}
+                      {% if todo.done %}
+                      {% else %}
+                      <form method="POST" action="{% url 'todo:update' %}">
+                            {% csrf_token %}
+                          <input type="text" name="todo_id" value="{{todo.id}}" style="display: none;">
+                          <button type="submit" class="btn btn-success ms-1">Finished</button>
+                      </form>
+                      {% endif %}
+                    </div>
+
                   </td>
                 </tr>
                 {% empty %}
